--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+ <meta charset="utf-8" >
+ <!-- <meta charset="utf-8" http-equiv="Content-Security-Policy" content="default-src 'self' * img-src *">-->
   <title>Confusion</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
 </head>
 <body>
   <app-root></app-root>
